--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,9 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
-// -- Read keystore.properties --
-def keystorePropertiesFile = rootProject.file("keystore.properties")
-def keystoreProperties = new Properties()
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-
-// -- Read admob.properties --
-def admobPropertiesFile = rootProject.file("admob.properties")
-def admobProperties = new Properties()
-admobProperties.load(new FileInputStream(admobPropertiesFile))
+def keystoreProperties = loadProps("keystore.properties")
+def admobProps = loadProps("admob.properties")
 
 android {
     signingConfigs {
@@ -38,10 +29,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
 
-            def admobAppId = admobProperties['appId']
+            def admobAppId = admobProps['appId']
             manifestPlaceholders = [admobAppId: admobAppId]
             buildConfigField 'String', 'ADMOB_APP_ID', "\"$admobAppId\""
-            resValue 'string', 'banner_ad_unit_id', admobProperties['bannerAdUnitId']
+            resValue 'string', 'banner_ad_unit_id', admobProps['bannerAdUnitId']
         }
         debug {
             applicationIdSuffix '.test'
@@ -55,9 +46,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
-    implementation 'com.google.android.gms:play-services-ads-lite:17.2.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
+    implementation 'com.google.android.gms:play-services-ads-lite:18.2.0'
+}
+
+def loadProps(filename) {
+    def file = rootProject.file(filename)
+    def props = new Properties()
+    props.load(new FileInputStream(file))
+    return props
 }
