--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 android.useAndroidX=true
 android.enableR8.fullMode=true
 org.gradle.unsafe.configuration-cache=true
-android.nonFinalResIds=false
+android.nonFinalResIds=true
